--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Detect shells installed on a system",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
     "clean": "rm -r lib",
-    "compile": "tsc --strictNullChecks false",
+    "compile": "tsc",
     "prepack": "npm run clean && npm run compile"
   },
   "repository": {
@@ -24,13 +25,11 @@
   },
   "homepage": "https://github.com/Subash/detect-shells#readme",
   "dependencies": {
-    "app-path": "^3.2.0",
-    "fs-extra": "^9.0.1",
-    "registry-js": "1.12.0"
+    "app-path": "^3.3.0",
+    "registry-js": "^1.15.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.6",
-    "jest": "^26.6.3",
-    "typescript": "^4.1.3"
+    "jest": "^28.1.3",
+    "typescript": "^4.7.4"
   }
 }
