--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,7 @@
-.DS_Store
-.gitignore
-.gitattributes
-package-lock.json
-tsconfig.json
+/.github
 /node_modules
+/scripts
 /src
 /tests
+.prettierrc
+tsconfig.json
