--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest",
     "clean": "rm -r lib",
     "compile": "tsc",
-    "prepack": "npm run clean && npm run compile"
+    "fetch-shells": "node scripts/fetch-shells.mjs",
+    "prepack": "npm run clean && npm run compile",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "registry-js": "^1.15.1"
   },
   "devDependencies": {
-    "jest": "^28.1.3",
-    "typescript": "^4.7.4"
+    "jest": "^29.5.0",
+    "jszip": "^3.10.1",
+    "typescript": "^5.0.3"
   }
 }
